--- a/weitaixin/src/main/res/layout/activity_pay_confirm_order.xml
+++ b/weitaixin/src/main/res/layout/activity_pay_confirm_order.xml
@@ -26,7 +26,7 @@
             android:gravity="center"
             android:text="订单商品:"
             android:textColor="@color/gray12"
-            android:textSize="@dimen/font10" />
+            android:textSize="@dimen/font14" />
 
 
         <TextView
@@ -38,13 +38,13 @@
             android:gravity="center"
             android:text="开通微胎心监护租凭服务"
             android:textColor="@color/font_color"
-            android:textSize="@dimen/font12" />
+            android:textSize="@dimen/font14" />
 
 
     </RelativeLayout>
 
     <TextView
-        android:id="@+id/tv2"
+        android:id="@+id/tv2Style"
         android:layout_width="match_parent"
         android:layout_height="28dp"
         android:layout_below="@id/rl11Function"
@@ -53,13 +53,13 @@
         android:paddingLeft="20dp"
         android:text="领取方式"
         android:textColor="@color/gray12"
-        android:textSize="@dimen/font10" />
+        android:textSize="@dimen/font12" />
 
     <RelativeLayout
         android:id="@+id/rlExpressageAction"
         android:layout_width="match_parent"
         android:layout_height="34dp"
-        android:layout_below="@id/tv2"
+        android:layout_below="@id/tv2Style"
         android:background="@color/white0">
 
         <ImageView
@@ -79,7 +79,7 @@
             android:layout_toRightOf="@id/ivExpressageAction"
             android:text="快递方式"
             android:textColor="@color/black0"
-            android:textSize="@dimen/font10" />
+            android:textSize="@dimen/font14" />
 
     </RelativeLayout>
 
@@ -109,7 +109,7 @@
             android:layout_toRightOf="@id/ivHospitalAction"
             android:text="医院自取"
             android:textColor="@color/black0"
-            android:textSize="@dimen/font10" />
+            android:textSize="@dimen/font14" />
 
     </RelativeLayout>
 
@@ -137,7 +137,7 @@
                 android:layout_marginTop="12dp"
                 android:text="选择医院"
                 android:textColor="@color/gray12"
-                android:textSize="@dimen/font10" />
+                android:textSize="@dimen/font16" />
 
             <TextView
                 android:id="@+id/tv22None"
@@ -148,7 +148,7 @@
                 android:layout_marginTop="12dp"
                 android:text="所选医生"
                 android:textColor="@color/gray12"
-                android:textSize="@dimen/font10" />
+                android:textSize="@dimen/font14" />
 
             <TextView
                 android:id="@+id/tv33None"
@@ -159,7 +159,7 @@
                 android:layout_marginTop="12dp"
                 android:text="医院地址"
                 android:textColor="@color/gray12"
-                android:textSize="@dimen/font10" />
+                android:textSize="@dimen/font14" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -170,7 +170,7 @@
                 android:layout_marginTop="9dp"
                 android:text="*请付款后到该医院领取设备，开通服务"
                 android:textColor="@color/gray4"
-                android:textSize="@dimen/font10" />
+                android:textSize="@dimen/font14" />
 
             <TextView
                 android:id="@+id/tvHospitalName"
@@ -181,7 +181,7 @@
                 android:layout_marginTop="12dp"
                 android:text=""
                 android:textColor="@color/gray12"
-                android:textSize="@dimen/font10" />
+                android:textSize="@dimen/font14" />
 
             <TextView
                 android:id="@+id/tvDoctorName"
@@ -193,7 +193,7 @@
                 android:layout_marginTop="12dp"
                 android:text=""
                 android:textColor="@color/gray12"
-                android:textSize="@dimen/font10" />
+                android:textSize="@dimen/font14" />
 
             <TextView
                 android:id="@+id/tvHospitalAddress"
@@ -205,7 +205,7 @@
                 android:layout_marginTop="12dp"
                 android:text=""
                 android:textColor="@color/gray12"
-                android:textSize="@dimen/font10" />
+                android:textSize="@dimen/font14" />
 
         </RelativeLayout>
 
@@ -223,7 +223,7 @@
                 android:layout_marginLeft="20dp"
                 android:text="地址都没有添加，要寄到哪里了？"
                 android:textColor="@color/gray4"
-                android:textSize="@dimen/font10" />
+                android:textSize="@dimen/font14" />
 
             <ImageView
                 android:layout_width="8dp"
@@ -259,7 +259,7 @@
                     android:layout_height="wrap_content"
                     android:text="收货人:"
                     android:textColor="@color/gray4"
-                    android:textSize="@dimen/font10" />
+                    android:textSize="@dimen/font14" />
 
                 <TextView
                     android:id="@+id/tvAddressName"
@@ -268,7 +268,7 @@
                     android:layout_marginLeft="8dp"
                     android:text=""
                     android:textColor="@color/black0"
-                    android:textSize="@dimen/font10" />
+                    android:textSize="@dimen/font14" />
             </LinearLayout>
 
 
@@ -285,7 +285,7 @@
                     android:layout_height="wrap_content"
                     android:text="电    话:"
                     android:textColor="@color/gray4"
-                    android:textSize="@dimen/font10" />
+                    android:textSize="@dimen/font14" />
 
                 <TextView
                     android:id="@+id/tvAddressPhoneNumber"
@@ -294,7 +294,7 @@
                     android:layout_marginLeft="8dp"
                     android:text=""
                     android:textColor="@color/black0"
-                    android:textSize="@dimen/font10" />
+                    android:textSize="@dimen/font14" />
             </LinearLayout>
 
 
@@ -310,7 +310,7 @@
                     android:layout_height="wrap_content"
                     android:text="收货地址:"
                     android:textColor="@color/gray4"
-                    android:textSize="@dimen/font10" />
+                    android:textSize="@dimen/font14" />
 
                 <TextView
                     android:id="@+id/tvAddressText"
@@ -319,7 +319,7 @@
                     android:layout_marginLeft="8dp"
                     android:text=""
                     android:textColor="@color/black0"
-                    android:textSize="@dimen/font10" />
+                    android:textSize="@dimen/font14" />
             </LinearLayout>
 
 
@@ -355,7 +355,7 @@
             android:layout_marginTop="12dp"
             android:text="商品清单"
             android:textColor="@color/gray12"
-            android:textSize="@dimen/font12" />
+            android:textSize="@dimen/font14" />
 
         <ListView
             android:id="@+id/lvGoodsList"
@@ -390,7 +390,7 @@
             android:layout_marginLeft="18dp"
             android:text=""
             android:textColor="@color/red0"
-            android:textSize="@dimen/font12" />
+            android:textSize="@dimen/font14" />
 
         <TextView
             android:id="@+id/tvSericeSubmitOrder"
@@ -403,8 +403,7 @@
             android:gravity="center"
             android:text="提交订单"
             android:textColor="@drawable/text_color_selector"
-            android:textSize="@dimen/font12" />
-
+            android:textSize="@dimen/font14" />
 
     </RelativeLayout>
 
