weitaixinpro  修改错误字段

--- a/weitaixinpro/src/main/res/layout/activity_login.xml
+++ b/weitaixinpro/src/main/res/layout/activity_login.xml
@@ -51,7 +51,7 @@
         android:layout_marginRight="20dp"
         android:background="@drawable/shape_green_button"
         android:gravity="center"
-        android:text="登录"
+        android:text="确定"
         android:textColor="@drawable/text_default_selector"
         android:textSize="@dimen/font_normal"/>
 
