--- a/weitaixin/src/main/res/layout/activity_pay_add_address.xml
+++ b/weitaixin/src/main/res/layout/activity_pay_add_address.xml
@@ -34,15 +34,15 @@
 
             <EditText
                 android:id="@+id/tvAddAddressName"
-                android:layout_width="160dp"
-                android:layout_height="wrap_content"
+                android:layout_width="220dp"
+                android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="34dp"
                 android:background="@android:color/transparent"
-                android:gravity="right"
-                android:maxLength="5"
+                android:gravity="right|center_vertical"
                 android:hint="请填写收货人"
+                android:maxLength="5"
                 android:singleLine="true"
                 android:text=""
                 android:textColor="@color/font_color"
@@ -76,13 +76,13 @@
 
             <EditText
                 android:id="@+id/tvAddAddressPhone"
-                android:layout_width="160dp"
-                android:layout_height="wrap_content"
+                android:layout_width="220dp"
+                android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="34dp"
                 android:background="@android:color/transparent"
-                android:gravity="right"
+                android:gravity="right|center_vertical"
                 android:hint="请填写手机号"
                 android:maxLength="11"
                 android:numeric="integer"
@@ -121,11 +121,11 @@
             <TextView
                 android:id="@+id/tvAddAddressArea"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="10dp"
                 android:layout_toLeftOf="@+id/ivarrow"
-                android:gravity="center"
+                android:gravity="right|center_vertical"
                 android:text="请选择所在地区"
                 android:textColor="@color/font_color"
                 android:textSize="@dimen/font14" />
@@ -155,13 +155,15 @@
         <RelativeLayout
             android:id="@+id/rl5Functioned"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_below="@id/rl3Functioned">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:paddingTop="12dp"
+                android:paddingBottom="12dp"
                 android:layout_marginLeft="18dp"
                 android:gravity="center"
                 android:text="详细地址"
@@ -171,16 +173,17 @@
 
             <EditText
                 android:id="@+id/tvAddAddressDetailAddress"
-                android:layout_width="160dp"
+                android:layout_width="220dp"
+                android:paddingTop="4dp"
+                android:paddingBottom="4dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="34dp"
                 android:background="@android:color/transparent"
-                android:gravity="right"
-                android:maxLength="60"
+                android:gravity="right|top"
                 android:hint="请填写详细地址"
-                android:singleLine="true"
+                android:maxLines="5"
                 android:text=""
                 android:textColor="@color/font_color"
                 android:textSize="@dimen/font14" />
@@ -203,8 +206,9 @@
         android:id="@+id/tvSubmitAddress"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_below="@id/rlFak"
         android:layout_marginLeft="18dp"
+        android:layout_marginBottom="210dp"
+        android:layout_below="@id/rlFak"
         android:layout_marginRight="14dp"
         android:layout_marginTop="26dp"
         android:background="@drawable/corner_background_green0"
