--- a/weitaixin/src/main/res/layout/activity_pay_order_details_new.xml
+++ b/weitaixin/src/main/res/layout/activity_pay_order_details_new.xml
@@ -292,7 +292,7 @@
     </RelativeLayout>
 
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/rl6Function"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -300,6 +300,7 @@
         android:layout_below="@id/rl5Function"
         android:layout_marginTop="12dp"
         android:background="@color/white0"
+        android:orientation="vertical"
         android:paddingBottom="12dp">
 
         <TextView
@@ -316,31 +317,133 @@
             android:id="@+id/lvGoodsList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tv"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="4dp"
             android:divider="@android:color/transparent"
-            android:dividerHeight="0dp" />
+            android:dividerHeight="0dp"
+            android:scrollbars="none" />
 
-    </RelativeLayout>
+        <LinearLayout
+            android:id="@+id/llPalne"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:gravity="center"
+                    android:paddingBottom="8dp"
+                    android:paddingTop="8dp"
+                    android:text="支付方式"
+                    android:textColor="@color/gray4"
+                    android:textSize="@dimen/font14" />
+
+                <TextView
+                    android:id="@+id/tvOrderDetailsPayway"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:gravity="center"
+                    android:paddingBottom="8dp"
+                    android:paddingTop="8dp"
+                    android:text=""
+                    android:textSize="@dimen/font14" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:gravity="center"
+                    android:paddingBottom="8dp"
+                    android:paddingTop="8dp"
+                    android:text="领取方式"
+                    android:textColor="@color/gray4"
+                    android:textSize="@dimen/font14" />
+
+                <TextView
+                    android:id="@+id/tvOrderDetailsPullway"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:gravity="center"
+                    android:paddingBottom="8dp"
+                    android:paddingTop="8dp"
+                    android:text=""
+                    android:textSize="@dimen/font14" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:gravity="center"
+                    android:paddingBottom="8dp"
+                    android:paddingTop="8dp"
+                    android:text="支付方式"
+                    android:textColor="@color/gray4"
+                    android:textSize="@dimen/font14"
+                    android:visibility="invisible" />
+
+                <TextView
+                    android:id="@+id/tvOrderDetailsPrice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:gravity="center"
+                    android:paddingBottom="8dp"
+                    android:paddingTop="8dp"
+                    android:text=""
+                    android:textColor="@color/red0"
+                    android:textSize="@dimen/font14" />
+            </RelativeLayout>
+        </LinearLayout>
+
+    </LinearLayout>
 
 
     <LinearLayout
-        android:layout_width="match_parent"
         android:id="@+id/rl10Function"
+        android:layout_width="match_parent"
         android:layout_height="46dp"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="1dp"
-        android:gravity="center"
         android:background="@color/white0"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tvCancelOrder"
             android:layout_width="160dp"
-            android:layout_gravity="center_vertical"
             android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
             android:background="@drawable/corner_gray10"
             android:gravity="center"
             android:text="取消订单"
@@ -350,8 +453,8 @@
         <TextView
             android:id="@+id/tvPayAffirmGoodsOrGoPay"
             android:layout_width="160dp"
-            android:layout_gravity="center_vertical"
             android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
             android:layout_marginLeft="20dp"
             android:background="@color/red0"
             android:gravity="center"
