--- a/weitaixin/src/main/res/drawable/corner_background_green0.xml
+++ b/weitaixin/src/main/res/drawable/corner_background_green0.xml
@@ -6,4 +6,10 @@
         android:width="1dp"
         android:color="@color/green0" />
 
+    <solid android:color="@color/white0" />
+
 </shape>
+
+
+
+
