--- a/weitaixin/src/main/res/layout/activity_pay_add_address.xml
+++ b/weitaixin/src/main/res/layout/activity_pay_add_address.xml
@@ -46,7 +46,9 @@
                 android:singleLine="true"
                 android:text=""
                 android:textColor="@color/font_color"
-                android:textSize="@dimen/font14" />
+                android:textSize="@dimen/font14" >
+                <requestFocus />
+            </EditText>
 
             <View
                 android:layout_width="match_parent"
@@ -162,10 +164,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:paddingTop="12dp"
-                android:paddingBottom="12dp"
                 android:layout_marginLeft="18dp"
                 android:gravity="center"
+                android:paddingBottom="12dp"
+                android:paddingTop="12dp"
                 android:text="详细地址"
                 android:textColor="@color/gray4"
                 android:textSize="@dimen/font14" />
@@ -174,8 +176,6 @@
             <EditText
                 android:id="@+id/tvAddAddressDetailAddress"
                 android:layout_width="220dp"
-                android:paddingTop="4dp"
-                android:paddingBottom="4dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
@@ -184,6 +184,8 @@
                 android:gravity="right|top"
                 android:hint="请填写详细地址"
                 android:maxLines="5"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
                 android:text=""
                 android:textColor="@color/font_color"
                 android:textSize="@dimen/font14" />
@@ -201,21 +203,30 @@
 
     </RelativeLayout>
 
-
-    <TextView
-        android:id="@+id/tvSubmitAddress"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginLeft="18dp"
-        android:layout_marginBottom="210dp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/rlFak"
-        android:layout_marginRight="14dp"
-        android:layout_marginTop="26dp"
-        android:background="@drawable/corner_background_green0"
-        android:gravity="center"
-        android:text="保存并返回"
-        android:textColor="@drawable/text_color_green0_selector"
-        android:textSize="@dimen/font14" />
+        android:layout_marginBottom="210dp"
+        android:background="@color/white0"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tvSubmitAddress"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginBottom="26dp"
+            android:layout_marginRight="14dp"
+            android:layout_marginTop="26dp"
+            android:background="@drawable/corner_background_green0"
+            android:gravity="center"
+            android:text="保存并返回"
+            android:textColor="@drawable/text_color_green0_selector"
+            android:textSize="@dimen/font14" />
+
+    </LinearLayout>
+
 
 </RelativeLayout>
 
