--- a/weitaixinpro/src/main/res/layout/monitor_fragment.xml
+++ b/weitaixinpro/src/main/res/layout/monitor_fragment.xml
@@ -91,17 +91,10 @@
             android:gravity="top|center"/>
     </LinearLayout>
 
-    <com.handmark.pulltorefresh.library.PullToRefreshListView
-        android:id="@+id/pullToRefresh"
+    <FrameLayout
+        android:id="@+id/act_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:cacheColorHint="#00000000"
-        android:divider="@null"
-        android:fadingEdge="none"
-        android:fastScrollEnabled="false"
-        android:footerDividersEnabled="false"
-        android:headerDividersEnabled="false"
-        android:listSelector="#55FFFFFF"
-        android:smoothScrollbar="true"/>
+        android:layout_height="match_parent">
+    </FrameLayout>
 
 </LinearLayout>
