--- a/weitaixin/src/main/res/layout/activity_curve_play.xml
+++ b/weitaixin/src/main/res/layout/activity_curve_play.xml
@@ -40,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxLength="3"
-                android:text="128"
+                android:text=""
                 android:textSize="46sp"
                 />
 
