--- a/weitaixin/src/main/res/layout/layout_title.xml
+++ b/weitaixin/src/main/res/layout/layout_title.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:background="@color/gray6">
+    android:layout_width="match_parent"
+    android:layout_height="48dp"
+    android:background="@color/gray6">
 
     <RelativeLayout
         android:id="@+id/back"
@@ -15,7 +15,7 @@
             android:layout_centerInParent="true"
             android:layout_marginLeft="20dp"
             android:scaleType="fitXY"
-            android:src="@drawable/nav_bar_arrow_left"/>
+            android:src="@drawable/nav_bar_arrow_left" />
 
     </RelativeLayout>
 
@@ -27,7 +27,7 @@
         android:layout_centerInParent="true"
         android:text="标题"
         android:textColor="@color/font_color"
-        android:textSize="@dimen/font_title"/>
+        android:textSize="@dimen/font_title" />
 
     <TextView
         android:id="@+id/function"
@@ -39,12 +39,42 @@
         android:gravity="center"
         android:textColor="@drawable/text_color_hei_selector"
         android:textSize="@dimen/font_normal"
-        android:visibility="invisible"/>
+        android:visibility="invisible" />
 
     <View
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:layout_alignParentBottom="true"
-        android:background="@color/gray18"/>
+        android:background="@color/gray18" />
+
+    <FrameLayout
+        android:id="@+id/flDelAction"
+        android:layout_width="70dp"
+        android:visibility="gone"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true">
+
+        <ImageView
+            android:id="@+id/ivDelectAction"
+            android:layout_width="46dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:padding="10dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/address_delect" />
+
+        <TextView
+            android:id="@+id/tvDelectAction"
+            android:layout_width="46dp"
+            android:gravity="center"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center"
+            android:text="取消"
+            android:textColor="@color/font_color"
+            android:textSize="@dimen/font_title" />
+    </FrameLayout>
+
 
 </RelativeLayout>
