--- a/weitaixin/src/main/res/layout/activity_monitor_detial.xml
+++ b/weitaixin/src/main/res/layout/activity_monitor_detial.xml
@@ -34,70 +34,94 @@
 
         </cn.ihealthbaby.weitaixin.ui.widget.CurveHorizontalScrollView>
 
-
-        <!--<TextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:layout_marginLeft="22dp"-->
-        <!--android:layout_marginTop="10dp"-->
-        <!--/>-->
-
-        <!--<TextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:layout_marginRight="22dp"-->
-        <!--android:layout_marginTop="10dp"-->
-        <!--/>-->
-
-
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="42dp"
-            >
+            android:layout_marginTop="26dp">
+
 
             <TextView
-                android:id="@+id/bpm"
+                android:id="@+id/tv_start_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:maxLength="3"
-                android:text="128"
-                android:textSize="46sp"
+                android:text="开始时间:00:00:00"
+                android:textColor="@color/text_subtitle_color"
                 />
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/bpm"
-                android:orientation="vertical"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="9dp"
                 >
 
-                <ImageView
-                    android:id="@+id/red_heart"
-                    android:layout_width="16dp"
-                    android:layout_height="12dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_toRightOf="@id/bpm"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/red_heart"/>
-
                 <TextView
+                    android:id="@+id/bpm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:singleLine="true"
-                    android:text="BPM"
-                    android:textColor="@color/red0"
+                    android:maxLength="3"
+                    android:text="0"
+                    android:textSize="46sp"
                     />
-            </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@id/bpm"
+                    android:orientation="vertical"
+                    >
+
+                    <ImageView
+                        android:id="@+id/red_heart"
+                        android:layout_width="16dp"
+                        android:layout_height="12dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_toRightOf="@id/bpm"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/red_heart"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:singleLine="true"
+                        android:text="BPM"
+                        android:textColor="@color/red0"
+                        />
+                </LinearLayout>
 
 
+            </RelativeLayout>
         </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/chs"
+            android:layout_centerHorizontal="true"
+            >
+
+            <ImageView
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/timer"
+                />
+
+            <TextView
+                android:id="@+id/tv_consum_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="00:00"
+                android:textColor="@color/text_subtitle_color"
+                />
+
+        </LinearLayout>
     </RelativeLayout>
+
 
     <RelativeLayout
         android:id="@+id/rl_function"
