--- a/weitaixin/src/main/res/layout/dialog_layout.xml
+++ b/weitaixin/src/main/res/layout/dialog_layout.xml
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="dsdad"
+            android:text=""
             android:textColor="#000"
             android:textSize="12sp" />
     </LinearLayout>
