调整布局,避免下方按钮过长

--- a/weitaixin/src/main/res/layout/activity_monitor_play.xml
+++ b/weitaixin/src/main/res/layout/activity_monitor_play.xml
@@ -142,7 +142,7 @@
         <RelativeLayout
             android:id="@+id/rl_function"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="120dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="20dp"
