--- a/weitaixin/src/main/res/layout/fragment_monitor.xml
+++ b/weitaixin/src/main/res/layout/fragment_monitor.xml
@@ -5,8 +5,8 @@
 
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@color/white0"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white0">
 
     <include
         android:id="@+id/head_title_id"
@@ -112,7 +112,7 @@
         <RelativeLayout
             android:id="@+id/rl_start"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="120dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
 
