--- a/weitaixin/src/main/res/layout/activity_main_welcome.xml
+++ b/weitaixin/src/main/res/layout/activity_main_welcome.xml
@@ -7,8 +7,8 @@
     <TextView
         android:id="@+id/tv_enter"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="match_parent"
         android:gravity="center"
-        android:text="enter" />
+        android:text="欢迎页开发中。。。" />
 
 </LinearLayout>
