--- a/weitaixin/src/main/res/layout/fragment_home_page.xml
+++ b/weitaixin/src/main/res/layout/fragment_home_page.xml
@@ -10,14 +10,79 @@
         layout="@layout/layout_title" />
 
 
-    <LinearLayout
-        android:id="@+id/ll_4"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="230dp"
         android:layout_below="@id/head_title_id"
-        android:gravity="center_vertical"
-        android:orientation="vertical">
+        android:background="@color/green6">
 
-    </LinearLayout>
+        <TextView
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="4dp"
+            android:layout_toLeftOf="@id/ivHomeHeadImg"
+            android:background="@drawable/home_head_age"
+            android:gravity="center"
+            android:text="31"
+            android:textColor="@color/white0"
+            android:textSize="@dimen/font14" />
+
+        <ImageView
+            android:id="@+id/ivHomeHeadImg"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/home_head_img" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/ivHomeHeadImg"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="4dp"
+            android:gravity="center"
+            android:text="张晓非"
+            android:textColor="@color/white0"
+            android:textSize="@dimen/font18" />
+
+        <RelativeLayout
+            android:layout_width="140dp"
+            android:layout_height="24dp"
+            android:background="@drawable/home_head_two">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:layout_toLeftOf="@+id/tvDay"
+                android:text="距预产期"
+                android:textColor="@color/white0" />
+
+            <TextView
+                android:id="@+id/tvDay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:text="278"
+                android:textColor="@color/white0" />
+        </RelativeLayout>
+    </RelativeLayout>
+
 
 </RelativeLayout>
+
+
+
+
+
+
+
+
+
+
+
+
