--- a/weitaixin/src/main/res/layout/fragment_home_page.xml
+++ b/weitaixin/src/main/res/layout/fragment_home_page.xml
@@ -16,6 +16,102 @@
         android:layout_below="@id/head_title_id"
         android:background="@color/green6">
 
+        <RelativeLayout
+            android:id="@+id/rlPregnancyDate"
+            android:layout_width="150dp"
+            android:layout_toRightOf="@+id/ivHomeHeadImg"
+            android:layout_marginBottom="10dp"
+            android:layout_above="@+id/rlProduceDate"
+            android:layout_height="24dp"
+            android:layout_marginLeft="-50dp"
+            android:layout_centerVertical="true"
+            android:background="@drawable/home_head_one">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="14dp"
+                android:layout_toLeftOf="@+id/tvPregnancyDayNumber"
+                android:singleLine="true"
+                android:text="怀孕天数"
+                android:textColor="@color/white0" />
+
+            <TextView
+                android:id="@+id/tvPregnancyDayNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:text="278"
+                android:textColor="@color/white0" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rlProduceDate"
+            android:layout_width="150dp"
+            android:layout_height="24dp"
+            android:layout_marginLeft="-50dp"
+            android:layout_toRightOf="@+id/ivHomeHeadImg"
+            android:layout_centerVertical="true"
+            android:background="@drawable/home_head_two">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="6dp"
+                android:layout_toLeftOf="@+id/tvProduceDayNumber"
+                android:singleLine="true"
+                android:text="距预产期"
+                android:textColor="@color/white0" />
+
+            <TextView
+                android:id="@+id/tvProduceDayNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:text="278"
+                android:textColor="@color/white0" />
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:id="@+id/rltvMonitorDate"
+            android:layout_width="150dp"
+            android:layout_height="24dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="-50dp"
+            android:layout_below="@+id/rlProduceDate"
+            android:layout_toRightOf="@+id/ivHomeHeadImg"
+            android:layout_centerVertical="true"
+            android:background="@drawable/home_head_three">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="34dp"
+                android:layout_toLeftOf="@+id/tvMonitorDayNumber"
+                android:singleLine="true"
+                android:text="已监测"
+                android:textColor="@color/white0" />
+
+            <TextView
+                android:id="@+id/tvMonitorDayNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:text="35"
+                android:textColor="@color/white0" />
+        </RelativeLayout>
+
+
         <TextView
             android:layout_width="48dp"
             android:layout_height="48dp"
@@ -35,41 +131,19 @@
             android:layout_centerInParent="true"
             android:src="@drawable/home_head_img" />
 
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/ivHomeHeadImg"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="6dp"
             android:gravity="center"
             android:text="张晓非"
             android:textColor="@color/white0"
             android:textSize="@dimen/font18" />
 
-        <RelativeLayout
-            android:layout_width="140dp"
-            android:layout_height="24dp"
-            android:background="@drawable/home_head_two">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="10dp"
-                android:layout_toLeftOf="@+id/tvDay"
-                android:text="距预产期"
-                android:textColor="@color/white0" />
-
-            <TextView
-                android:id="@+id/tvDay"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="10dp"
-                android:text="278"
-                android:textColor="@color/white0" />
-        </RelativeLayout>
     </RelativeLayout>
 
 
