首页界面修改

--- a/weitaixin/src/main/res/layout/fragment_home_page.xml
+++ b/weitaixin/src/main/res/layout/fragment_home_page.xml
@@ -4,12 +4,15 @@
     android:layout_height="match_parent"
     android:background="@color/gray5">
 
+    <include
+        android:id="@+id/head_title_id"
+        layout="@layout/layout_title" />
 
 
     <RelativeLayout
         android:id="@+id/rlHomeHeadArea"
         android:layout_width="match_parent"
-        android:layout_height="240dp"
+        android:layout_height="230dp"
         android:layout_below="@id/head_title_id"
         android:background="@color/green6">
 
@@ -152,7 +155,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="18dp"
+            android:layout_marginTop="14dp"
             android:gravity="center_horizontal"
             android:orientation="horizontal">
 
@@ -203,7 +206,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:layout_marginTop="18dp"
             android:orientation="horizontal">
 
             <LinearLayout
